--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,25 @@
 ###########################################################
+name: "aureliejodellekemme"
+title: "aureliejodellekemme"
+description: "Jekyll template, Meduim styled, for aureliejodellekemme"
+logo: 'assets/images/logo.png'
+baseurl: ''
+googl_analytics: ''
+disqus: ''
+milchimp-list: ''
+include: ["_pages"]
 # Global Configuration (https://jekyllrb.com/docs/configuration/options/)
 ###########################################################
 # if you want to force HTTPS, specify the domain without the http at the start
-# set domain: "your_github_user_name.github.io"
+# set domain: "aureliejodellekemme.github.io"
 domain: ""
 
 # your web site url
-# for GitHub Pages, url: "https://your_github_user_name.github.io"
+# for GitHub Pages, url: "https://aureliejodellekemme.github.io"
 url: ""
 
 # path to this site
-# if your page is located at https://your_github_user_name.github.io/blog, then set baseurl: "/blog"
+# if your page is located at https://aureliejodellekemme.github.io/blog, then set baseurl: "/blog"
 baseurl: ""
 
 # please use TZ database name column on the list table
@@ -27,7 +36,7 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
-      permalink: /posts/:path
+      permalink: /:aureliejodellekemme/
 
   # for multilingual posts
   - scope:
@@ -36,7 +45,7 @@ defaults:
     values:
       hidden: true
       layout: "post"
-      permalink: /:path
+      permalink: /:aureliejodellekemme/
 
   # example: enable setting for all pages. You may still need to enable some setting from _data/conf/posts.yml or _data/conf/main.yml
   # - scope:
